All_Component_DX/force-app/main/default/objects/Stock_Transfer__c/Stock_Transfer__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to capture transfer of inventory between two locations through hand-pick/delivery. This is used when Field engineers drop by at a warehouse for picking up inventory or when parts are moved between a warehouse and a repair facility both located in the same building.</description>
    <label>Stock Transfer</label>
    <nameField>
        <displayFormat>SXFR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Transfer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>