All_Component_DX/force-app/main/default/objects/Stock_Transfer__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Physical Location where stock is transfered to. This is a lookup to an existing site record.</description>
    <inlineHelpText>Physical Location where stock is transfered to. This is a lookup to an existing site record.</inlineHelpText>
    <label>Destination Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Stock Transfer (Destination Location)</relationshipLabel>
    <relationshipName>Stock_Transfer_To</relationshipName>
    <type>Lookup</type>
</CustomField>