All_Component_DX/force-app/main/default/objects/Stock_Transfer__c/fields/IsPartner__c.field-meta.xml
<CustomField>
    <fullName>IsPartner__c</fullName>
    <description>Flag indicates if transaction is for/ by a Partner or not.</description>
    <formula>IF( IsPartnerRecord__c ,&quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag indicates if transaction is for/ by a Partner or not.</inlineHelpText>
    <label>IsPartner</label>
    <type>Text</type>
</CustomField>