All_Component_DX/force-app/main/default/objects/Stock_Transfer__c/fields/Not_Posted_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Not_Posted_Item_Count__c</fullName>
    <description>Count of line items that are not posted.</description>
    <inlineHelpText>Count of line items that are not posted.</inlineHelpText>
    <label>Not Posted Item Count</label>
    <summaryFilterItems>
        <field>Stock_Transfer_Line__c.Posted_To_Inventory__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Stock_Transfer_Line__c.Stock_Transfer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>