All_Component_DX/force-app/main/default/objects/Stock_Transfer__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact, set by trigger</description>
    <inlineHelpText>Lookup to Partner Contact.</inlineHelpText>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stock Transfer</relationshipLabel>
    <relationshipName>Stock_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>