All_Component_DX/force-app/main/default/objects/Stock_Transfer__c/fields/SM_Batch_Lot__c.field-meta.xml
<CustomField>
    <fullName>SM_Batch_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(Do Not Use)</description>
    <label>Batch/Lot(Do Not Use)</label>
    <referenceTo>Batch_Lot_Master__c</referenceTo>
    <relationshipLabel>Stock Transfer</relationshipLabel>
    <relationshipName>Stock_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>