All_Component_DX/force-app/main/default/objects/Stock_Transfer__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Physical Location from where stock is transfered. This is a lookup to an existing site record.</description>
    <inlineHelpText>Physical Location from where stock is transfered. This is a lookup to an existing site record.</inlineHelpText>
    <label>Source Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Stock Transfer (Source Location)</relationshipLabel>
    <relationshipName>Stock_Transfer_From</relationshipName>
    <type>Lookup</type>
</CustomField>