All_Component_DX/force-app/main/default/objects/Stock_Transfer__c/validationRules/SVMXC_ValidateTransferLocations.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC_ValidateTransferLocations</fullName>
    <active>true</active>
    <description>Source and destination locations cannot be the same.</description>
    <errorConditionFormula>( Source_Location__c =  Destination_Location__c)</errorConditionFormula>
    <errorDisplayField>Source_Location__c</errorDisplayField>
    <errorMessage>Source and destination locations cannot be the same.</errorMessage>
</ValidationRule>