All_Component_DX/force-app/main/default/objects/Stock_Transfer__c/listViews/All_Stock_Transfers.listView-meta.xml
<ListView>
    <fullName>All_Stock_Transfers</fullName>
    <columns>NAME</columns>
    <columns>Source_Location__c</columns>
    <columns>Destination_Location__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Stock Transfers</label>
    <language>en_US</language>
</ListView>